--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "^20.3.1",
     "@types/validator": "^13.7.17",
     "ts-loader": "^9.4.3",
@@ -21,6 +22,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "validator": "^13.9.0"
   }
 }
